Fix CTA Overlap on Article Cards

--- a/dev/scss/layout_prefold.scss
+++ b/dev/scss/layout_prefold.scss
@@ -251,6 +251,7 @@ li {
       bottom: 0;
       position: absolute;
       right: 0;
+      z-index: 1;
     }
 
   }
